# internal/modules/post/model.go
@@ -1,23 +1,26 @@
 package post
 
 import (
+	"encoding/json"
 	"time"
 
 	"github.com/google/uuid"
 )
 
 type Post struct {
-	ID          uuid.UUID  `json:"id"`
-	ReferenceID string     `json:"reference_id"`
-	UserID      uuid.UUID  `json:"user_id"`
-	Title       string     `json:"title"`
-	Content     string     `json:"content"`
-	Tags        []string   `json:"tags"`
-	Version     int        `json:"version"`
-	CreatedAt   time.Time  `json:"created_at"`
-	UpdatedAt   time.Time  `json:"updated_at"`
-	CreatedBy   *uuid.UUID `json:"created_by,omitempty"`
-	UpdatedBy   *uuid.UUID `json:"updated_by,omitempty"`
-	DeletedAt   *time.Time `json:"-"`
-	DeletedBy   *uuid.UUID `json:"-"`
+	ID          uuid.UUID       `json:"id"`
+	ReferenceID string          `json:"reference_id"`
+	UserID      uuid.UUID       `json:"user_id"`
+	Title       string          `json:"title"`
+	Content     string          `json:"content"`
+	Tags        []string        `json:"tags"`
+	Version     int             `json:"version"`
+	IsVisible   bool            `json:"is_visible"`
+	Metadata    json.RawMessage `json:"metadata"`
+	CreatedAt   time.Time       `json:"created_at"`
+	UpdatedAt   time.Time       `json:"updated_at"`
+	CreatedBy   *uuid.UUID      `json:"created_by,omitempty"`
+	UpdatedBy   *uuid.UUID      `json:"updated_by,omitempty"`
+	DeletedAt   *time.Time      `json:"-"`
+	DeletedBy   *uuid.UUID      `json:"-"`
 }
